fix: xdg-desktop-portal not working, small icons in neofetch + small changes

--- a/modules/home/config/neofetch/config.conf
+++ b/modules/home/config/neofetch/config.conf
@@ -71,7 +71,7 @@ underline_char="─"
 # Example:
 # separator="->":   "Shell-> bash"
 # separator=" =":   "WM = dwm"
-separator="​" # zero width space
+separator=" "
 
 
 # Color Blocks
